
    - QwtWeedingCurveFitter::fitCurve fixed when being called with no points

    - missing updates added for QwtLegend::setMaxColumns, QwtScaleWidget::setLayoutFlag

    - QwtPlotCurve::drawSteps: polygon clipping fixed by adding
      an extra pixel to the clip rectangle

    - QwtPlotItem::ScaleInterest enabled for all constructors of
      QwtPlotSeriesItem

=========
Qwt 6.1.3
=========

1) QwtPlotMagnifier, QwtPlotZoomer

    - handling of non linear transformations ( f.e logarithmic )

2) Date/Time scales

    - QwtDate::ceil(), QwtDate::weekNumber(), QwtDate::utcOffset() fixed
    - QwtDateScaleEngine fixed when aligning to months

3) QwtPlotLayout

    - layout bug for legends witdh visible scrollbars fixed
   
4) Plot items

    - hiding QwtPlotLegendItem without entries
    - QwtPlotShapeItem render code fixed

5) QwtPlotGLCanvas

    - slightly improved, nevertheless better use
      Qwt 6.2 when being interested in OpenGL

6) Other

    - QwtGraphic boundingRect updates fixed
    - QwtSyntheticPointData::x() fixed
    - QwtLogScaleEngine::divideScale ignoring stepSize parameter for ranges
      below one "decade"
    - QwtPlotAbstractBarChart::getCanvasMarginHint fixed

=========
Qwt 6.1.2
=========

1) Qt 5.4 compatibility

   - QT_STATIC_CONST
     "QT_STATIC_CONST" replaced by "static const"
  
2) build environment

   - QMAKELIBDIRFLAGS
     using QMAKELIBDIRFLAGS to avoid conflicts with already 
     installed linux distro packages

3) color maps

    - QwtLinearColorMap 
      handling of alpha values added

    - QwtAlphaColorMap
      basic functinality fixed

    - QwtPainter
      QwtPainter::drawColorBar() fixed for semi transparent colors.

4) QwtPlot and friends
      
   - QwtLegend
     layout issue fixed

   - QwtLogScaleEngine
     tick duplicates fixed     

   - QwtPainter
     internal chunk size for drawing polylines with the raster paint engine 
     reduced from 20 to 6 ( faster ).

Qwt 6.1.1
=========

1) build environment
